--- a/Semi_Project_QTMarket/src/main/webapp/resources/css/community/style.css
+++ b/Semi_Project_QTMarket/src/main/webapp/resources/css/community/style.css
@@ -65,7 +65,7 @@ body {
   width: 100%;
   height: 100vh;
   font-family: "Gugi", cursive;
-  background: url(/imgs/backgorund/background2.png) center/cover no-repeat;
+  background: url(background2.png) center/cover no-repeat;
   /* /* -ms-overflow-style: none; -- IE & Edge */
   scrollbar-width: none; /* -- Firefox */
 }
@@ -76,9 +76,8 @@ body::-webkit-scrollbar {
 
 #navbar {
   display: flex;
-  position: fixed;
   width: 100%;
-  height: 7vh;
+  height: 7%;
   top: 0;
   background-color: rgba(252, 252, 136, 0.6);
   color: black;
@@ -88,11 +87,6 @@ body::-webkit-scrollbar {
   font-size: var(--font-medium);
   transition: all var(--animation-duration) ease-in-out;
   z-index: 1;
-}
-
-#navbar.navbar--dark {
-  background-color: #fcfc88;
-  padding: 40px;
 }
 
 .navbar__logo {
@@ -136,82 +130,160 @@ body::-webkit-scrollbar {
   color: var(--color-dark-pink);
 }
 
-/* Main_Table */
 #main {
-  width: 100%;
-  height: 100%;
-}
-
-.main__section {
-  width: 60%;
-  margin: auto;
   display: flex;
-  justify-content: center;
+  width: 70%;
+  height: 93%;
+  margin: auto;
 }
 
-.table {
-  margin-top: 130px;
-  table-layout: fixed;
-  width: 100%;
-  background: var(--color-white);
-  border-collapse: collapse;
-  border: 1px solid transparent;
+.main__header {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  height: 90%;
+  margin: auto;
+}
+
+.box {
+  background: #ffffff;
   border-radius: 4px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
   padding: 14px;
 }
 
-th {
-  letter-spacing: 2px;
+.main__header__categories {
+  width: 100%;
+  height: 32%;
+  margin-bottom: auto;
+  border: 1px solid black;
 }
 
-td {
-  letter-spacing: 1px;
+.main__header__categories p {
+  font-size: 38px;
+  border-bottom: 1px solid black;
 }
 
-th,
-td {
-  padding: 10px;
-  border-bottom: 1px solid var(--color-black);
-  border-collapse: collapse;
+.main__header__categories li {
+  font-size: 25px;
+  margin-top: 18px;
 }
 
-.table__no {
-  width: 10%;
+.main__header__best {
+  width: 100%;
+  height: 32%;
+  margin: auto;
+  border: 1px solid black;
 }
 
-.table__title {
-  width: 50%;
+.main__header__best > p {
+  font-size: 38px;
+  border-bottom: 1px solid black;
 }
 
-.table__author {
-  width: 20%;
+.main__header__best div {
+  font-size: 20px;
+  margin-top: 8%;
 }
 
-.table__enroll {
-  width: 15%;
+.main__header__best div span {
+  font-size: 13 px;
 }
 
-.table__hits {
-  width: 5%;
+.main__header__read {
+  width: 100%;
+  height: 31%;
+  margin-top: auto;
+  border: 1px solid black;
 }
 
-.table__tbody {
-  text-align: center;
-}
-
-.table__tbody tr td:nth-child(2) {
-  text-align: start;
-}
-
-.main__paging {
-  width: 60%;
-  margin: 20px auto;
+.main__home {
   display: flex;
-  justify-content: center;
-  letter-spacing: 6px;
-  font-size: var(--font-regular);
+  flex-direction: column;
+  width: 75%;
+  height: 90%;
+  margin: auto;
 }
+
+.main__home__categories {
+  width: 100%;
+  height: 10%;
+  border: 1px solid black;
+  margin-bottom: auto;
+}
+
+.main__home__board {
+  width: 100%;
+  height: 88%;
+  border: 1px solid black;
+  margin-top: auto;
+}
+
+.main__home__board article {
+  display: flex;
+  width: 100%;
+  height: 24%;
+  background: #ffffff;
+  border-radius: 4px;
+  box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.1);
+  padding: 14px;
+  margin-bottom: 10px;
+}
+
+.article__one img {
+  width: 200px;
+  height: 200px;
+  border-radius: 4px;
+}
+
+.article__two {
+  display: flex;
+  flex-direction: column;
+  padding-left: 15px;
+}
+
+.two__div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.two__div__one {
+  display: flex;
+  align-items: center;
+}
+
+.two__div__one span {
+  padding-left: 10px;
+}   
+
+.two__div__description {
+  display: flex;
+  flex-direction: column;
+}
+
+.two__div__description p {
+  font-size: 20px;
+  margin-bottom: 6px;
+}
+
+.two__div__footer {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.two__div__footer span {
+  padding-left: 5px;
+  font-size: 14px;
+}
+
+.article__two img {
+  width: 60px;
+  border-radius: 50%;
+  border: 1px solid;
+}
+
 
 .menu-item,
 .menu-open-button {
