--- a/Semi_Project_QTMarket/src/main/webapp/resources/css/login/style.css
+++ b/Semi_Project_QTMarket/src/main/webapp/resources/css/login/style.css
@@ -25,7 +25,6 @@ html,
 body {
   height: 100vh;
   overflow: hidden;
-  background: url(/imgs/backgorund/background2.png);
 }
 
 .container {
@@ -125,6 +124,23 @@ body {
 }
 .sign-ups {
   background-color: var(--secondary-color);
+}
+
+.input-group input::file-selector-button {
+  display: none;
+}
+
+.enroll__idcheck {
+  position: absolute;
+  top: 6%;
+  right: 6%;
+  width: 20%;
+  padding: 2px;
+  font-size: 1rem;
+  background-color: var(--gray);
+  border-radius: 0.5rem;
+  border: 0.125rem solid var(--secondary-color);
+  outline: none;
 }
 
 .login__save {
