--- a/Semi_Project_QTMarket/src/main/webapp/resources/css/login/style.css
+++ b/Semi_Project_QTMarket/src/main/webapp/resources/css/login/style.css
@@ -67,6 +67,7 @@ body {
 }
 
 .input-group {
+	display: flex;
   position: relative;
   width: 100%;
   margin: 1rem 0;
@@ -92,6 +93,7 @@ body {
 }
 
 .input-group select {
+  
   width: 100%;
   padding: 1rem 3rem;
   font-size: 1rem;
