회원가입 구현 완료 및 각 페이지 별 MVC 모델 생성, Project WAR 파일 생성.

--- a/Semi_Project_QTMarket/src/main/webapp/resources/css/login/style.css
+++ b/Semi_Project_QTMarket/src/main/webapp/resources/css/login/style.css
@@ -25,6 +25,7 @@ html,
 body {
   height: 100vh;
   overflow: hidden;
+  background: url(/Semi_Project_QTMarket/resources/imgs/backgorund/background2.png) center/cover no-repeat;
 }
 
 .container {
