--- a/Semi_Project_QTMarket/src/main/webapp/resources/css/main/style.css
+++ b/Semi_Project_QTMarket/src/main/webapp/resources/css/main/style.css
@@ -65,6 +65,7 @@ body {
   font-family: "Gugi", cursive;
   position: relative;
   overflow: hidden;
+  background: url(/Semi_Project_QTMarket/resources/imgs/backgorund/background2.png) center/cover no-repeat;
 }
 
 /* Section common */
