--- a/Semi_Project_QTMarket/src/main/webapp/resources/css/community/boardstyle.css
+++ b/Semi_Project_QTMarket/src/main/webapp/resources/css/community/boardstyle.css
@@ -89,9 +89,9 @@ a:hover{
     display: inline-block;
     margin-left: 10px;
     padding: 10px;
-    border: 1px solid #FDE37B;
+    border: 1px solid black;
     background: #FDE37B;
-    color: white;
+    color:  black;
     width: 100px;
     height: 40px;
 }
@@ -105,6 +105,10 @@ a:hover{
     border-color: #FDE37B;
     background: white;
     color: black;
+}
+
+.btn_wrap button:hover{
+	background: #fe4365;
 }
 
 .board_list{
