게시판 기능 구현중(댓글 ing)

--- a/Semi_Project_QTMarket/src/main/webapp/resources/css/community/boardstyle.css
+++ b/Semi_Project_QTMarket/src/main/webapp/resources/css/community/boardstyle.css
@@ -419,4 +419,36 @@ select{
     height: 30px;
 }
 
+#tbl-comment{
+    /* border: 1px solid black; */
+    padding: 10px;
+    width: 100%;
+    box-sizing: border-box;
+}
 
+#tbl-comment .btn-comment{
+    float: right;
+}
+
+#tbl-comment #comment-content{
+    padding-bottom: 7px;
+    border-bottom: 1px dashed #777;
+}
+
+
+.comment-editor textarea{
+	margin-left: 10px;
+	margin-top : 7px;
+	width: 80%;
+	resize: none;
+}
+
+#btn-insert{
+	width:60px;
+	height:45px; 
+	color:white; 
+	background-color:#8c52ff;
+	border-style: outset;
+	position:relative;
+	top:-20px;
+}
