--- a/Semi_Project_QTMarket/src/main/webapp/resources/css/editprofile/style.css
+++ b/Semi_Project_QTMarket/src/main/webapp/resources/css/editprofile/style.css
@@ -250,4 +250,38 @@ p {
 
 .pointer {
   cursor: pointer;
-}}
+}
+
+.profileimage {
+  height: 300px;
+  width: 350px;
+  border-radius: 50%;
+  border: 1px solid var(--color-white);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.filebox label { 
+	display: inline-block; 
+	padding: .5em .75em; 
+	color: #999; font-size: inherit; 
+	line-height: normal; 
+	vertical-align: middle; 
+	background-color: #fdfdfd; 
+	cursor: pointer; 
+	border: 1px solid #ebebeb; 
+	border-bottom-color: #e2e2e2; 
+	border-radius: .25em; } 
+	
+.filebox input[type="file"] 
+{ /* 파일 필드 숨기기 */ position: absolute; 
+width: 1px; 
+height: 1px; 
+padding: 0; 
+margin: -1px; 
+overflow: hidden; 
+clip:rect(0,0,0,0); 
+border: 0; }
+
+
